# context-free-grammar

./: .gitignore  .travis.yml  LICENSE  Makefile  NOTES.txt  README.md  VERSION  changelog  context-free-grammar.cabal
.github/workflows/: haskell-ci.yml
src/Data/: Cfg.hs
src/Data/Cfg/: Analysis.hs  Augment.hs  Bnf.hs  CPretty.hs  Cfg.hs  Collect.hs  CycleRemoval.hs  Cyclic.hs  EpsilonProductions.hs  FirstSet.hs  FixedPoint.hs  FollowSet.hs  FreeCfg.hs  Item.hs  LeftFactor.hs  LeftRecursion.hs  LookaheadSet.hs  Nullable.hs  PredictSet.hs  Pretty.hs  Productive.hs  Reachable.hs  RuleApplication.hs  SCComp.hs
src/Data/Cfg/Bnf/: Parser.y  QQ.hs  Scanner.x  Syntax.hs  Token.hs
src/Data/Cfg/Internal/: FirstSet.hs  FollowSet.hs  Nullable.hs  PredictSet.hs
src/Data/Cfg/LeftRecursion/: Cycles.hs
src/Data/Graph/Inductive/: ULGraph.hs
src/Data/Graph/Inductive/ULGraph/Query/: DFS.hs
tests/: Test.hs
tests/Data/: CfgTests.hs
tests/Data/Cfg/: BnfTests.hs  CyclicTests.hs  EpsilonProductionsTests.hs  FirstSetTests.hs  FollowSetTests.hs  FreeCfgInstances.hs  FreeCfgTests.hs  Gram.hs  GramTests.hs  Instances.hs  LeftFactorTests.hs  LeftRecursionTests.hs  LookaheadSetTests.hs  ProductiveTests.hs  ReachableTests.hs  TestGrammars.hs
