Name:                   context-free-grammar
Version:                0.0.1
Author:                 Eric Nedervold<nedervoldsoftware@gmail.com>
Maintainer:             Eric Nedervold<nedervoldsoftware@gmail.com>
License:                BSD3
License-File:           LICENSE
Copyright:              (c) 2015 Eric Nedervold
Stability:              alpha
Homepage:               http://github.com/nedervold/context-free-grammar
Bug-Reports:            http://github.com/nedervold/context-free-grammar/issues
Synopsis:               Basic algorithms on context-free grammars
Description:            Basic algorithms on context-free grammars
Category:               Data
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Cfg
                      , Data.Cfg.Augment
                      , Data.Cfg.Cfg
                      , Data.Cfg.CPretty
                      , Data.Cfg.FreeCfg
                      , Data.Cfg.LookaheadSet
                      , Data.Cfg.Nullable
                      , Data.Cfg.RuleApplication
  -- Other-Modules:        Data.Cfg.Internal
  Build-Depends:        base >= 4 && < 5
                      , containers >= 0.5 && < 0.6
                      , control-monad-omega >= 0.3 && < 0.4
                      , dlist >= 0.7 && < 0.8
                      , mtl >= 2.1 && < 2.2
                      , pretty >= 1.1 && < 1.2

-- Executable context-free-grammar-exe
--   Default-Language:     Haskell2010
--   GHC-Options:          -Wall
-- --  Other-Modules:
--   Hs-Source-Dirs:       src
--   Main-Is:              Main.hs
--   Build-Depends:        base

Test-Suite test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       tests
  Ghc-Options:          -Wall
  Main-Is:              Test.hs
  Other-Modules:        Data.CfgTests
                      , Data.Cfg.Gram
                      , Data.Cfg.GramTests
                      , Data.Cfg.LookaheadSetTests
  Build-Depends:        base
                      , BNFC-meta >= 0.4 && < 0.5
                      , containers >= 0.5 && < 0.6
                      , context-free-grammar
                      , HUnit
                      , pretty >= 1.1 && < 1.2
                      , QuickCheck >= 2.6 && < 2.7
                      , template-haskell
                      , test-framework
                      , test-framework-hunit

Source-Repository head
  Type:                 git
  Location:             git://github.com/nedervold/context-free-grammar.git

