Name:                   context-free-grammar
Version:                0.2.0
Author:                 Eric Nedervold<nedervoldsoftware@gmail.com>
Maintainer:             Eric Nedervold<nedervoldsoftware@gmail.com>
License:                BSD3
License-File:           LICENSE
Copyright:              (c) 2015 Eric Nedervold
Stability:              alpha
Homepage:               http://github.com/nedervold/context-free-grammar
Bug-Reports:            http://github.com/nedervold/context-free-grammar/issues
Synopsis:               Basic algorithms on context-free grammars
Description:

    Basic algorithms on context-free grammars:
    .
    * augmenting a grammar
    .
    * calculating nullability
    .
    * calculating reachability
    .
    * calculating first sets
    .
    * calculating follow sets
    .
    * calculating predict sets
    .
    * removing left-recursion
    .
    You may define your context-free grammar textually using 'parse'
    or with the quasiquoter 'bnf' (both in "Data.Cfg.Bnf"), or you may
    use any data structure you like after making it an instance of
    'Cfg' (found in "Data.Cfg.Cfg").
    .
    Testing is thin in this version.

Category:               Language
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     Makefile
                      , changelog

Tested-With:
  GHC == 9.4.4
  GHC == 9.2.7
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3
  GHC == 7.8.4

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Cfg
                      , Data.Cfg.Analysis
                      , Data.Cfg.Augment
                      , Data.Cfg.Bnf
                      , Data.Cfg.Cfg
                      , Data.Cfg.CycleRemoval
                      , Data.Cfg.Cyclic
                      , Data.Cfg.EpsilonProductions
                      , Data.Cfg.FreeCfg
                      , Data.Cfg.Item
                      , Data.Cfg.LeftFactor
                      , Data.Cfg.LeftRecursion
                      , Data.Cfg.LookaheadSet
                      , Data.Cfg.Nullable
                      , Data.Cfg.Pretty
                      , Data.Cfg.Reachable
                      , Data.Cfg.RuleApplication
  Other-Modules:        Data.Cfg.Bnf.Parser
                      , Data.Cfg.Bnf.QQ
                      , Data.Cfg.Bnf.Scanner
                      , Data.Cfg.Bnf.Syntax
                      , Data.Cfg.Bnf.Token
                      , Data.Cfg.Collect
                      , Data.Cfg.FixedPoint
                      , Data.Cfg.Internal.FirstSet
                      , Data.Cfg.Internal.FollowSet
                      , Data.Cfg.Internal.PredictSet
                      , Data.Cfg.LeftRecursion.Cycles
                      , Data.Graph.Inductive.ULGraph
                      , Data.Graph.Inductive.ULGraph.Query.DFS
  Build-Depends:        base >= 4 && < 4.18
                          -- base-4.18 wants Functor superclasses for Bifunctor
                      , array >= 0.5
                      , bifunctors >= 4
                      , containers >= 0.5
                      , control-monad-omega >= 0.3
                      , dlist >= 0.7
                      , fgl >= 5.5
                      , mtl >= 2.1
                      , pretty >= 1.1
                      , semigroups
                      , template-haskell
  Build-Tools:          alex
                      , happy

Test-Suite test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       tests
  Ghc-Options:          -Wall
  Main-Is:              Test.hs
  Other-Modules:        Data.CfgTests
                      , Data.Cfg.BnfTests
                      , Data.Cfg.CyclicTests
                      , Data.Cfg.EpsilonProductionsTests
                      , Data.Cfg.FirstSetTests
                      , Data.Cfg.FollowSetTests
                      , Data.Cfg.FreeCfgTests
                      , Data.Cfg.Instances
                      , Data.Cfg.LeftFactorTests
                      , Data.Cfg.LeftRecursionTests
                      , Data.Cfg.LookaheadSetTests
                      , Data.Cfg.ReachableTests
                      , Data.Cfg.TestGrammars
  Build-Depends:        base
                      , containers >= 0.5
                      , context-free-grammar
                      , HUnit
                      , pretty >= 1.1
                      , QuickCheck >= 2.6
                      , quickcheck-properties >= 0.1
                      , template-haskell
                      , test-framework
                      , test-framework-hunit
                      , test-framework-quickcheck2 >= 0.3

Source-Repository head
  Type:                 git
  Location:             https://github.com/nedervold/context-free-grammar.git
